<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.qmetry</groupId>
	<artifactId>qaf-parent</artifactId>
	<version>${revision}</version>
	<packaging>pom</packaging>
	<name>qaf-parent</name>
	<url>https://github.com/qmetry/qaf</url>
	<description>Functional test automation framework for web, mobile-web,
		mobile native and web-service</description>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>http://www.opensource.org/licenses/mit-license.php</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<email>cjayswal@gmail.com</email>
			<name>Chirag Jayswal</name>
			<url>https://github.com/cjayswal</url>
			<id>cjayswal</id>
		</developer>
	</developers>
	<organization>
		<name>QMetry</name>
		<url>https://github.com/qmetry</url>
	</organization>
	<scm>
		<connection>scm:git:git://github.com/qmetry/qaf.git</connection>
		<developerConnection>scm:git:git@github.com:qmetry/qaf.git</developerConnection>
		<url>https://github.com/qmetry/qaf</url>
	</scm>
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/qmetry/qaf/issues</url>
	</issueManagement>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<revision>4.0.0-SNAPSHOT</revision>
		<qaf.version>${revision}</qaf.version>
		<selenium.version>4.0.0</selenium.version>
		<aspectj.version>1.9.5</aspectj.version>
		<poi.version>5.0.0</poi.version>
		<skip.it>true</skip.it>
	</properties>

	<modules>
		<module>qaf-core</module>
		<module>qaf-testng</module>
		<module>qaf-ws</module>
		<module>qaf-selenium</module>
		<module>qaf-playwright</module>
		<module>qaf-tools</module>
		<module>qaf</module>
		<module>qaf-support</module>
		<module>qaf-support-ws</module>
	</modules>
	<dependencies>
		<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>2.20.0</version>
				<optional>true</optional>
			</dependency>
		<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjrt</artifactId>
				<version>${aspectj.version}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjweaver</artifactId>
				<version>${aspectj.version}</version>
				<scope>compile</scope>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjtools</artifactId>
				<version>${aspectj.version}</version>
				<scope>compile</scope>
			</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.10</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>1.5</version>
				<executions>
				<execution>
						<phase>initialize</phase>
						<id>parse-version</id>
						<goals>
							<goal>parse-version</goal>
						</goals>
					</execution>
					<execution>
						<id>add-test-source</id>
						<phase>process-resources</phase>
						<goals>
							<goal>add-test-source</goal>
						</goals>
						<configuration>
							<sources>
								<source>src/it/java</source>
							</sources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<skip>true</skip>
					<includesFile>*/test/*</includesFile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<skip>${skip.it}</skip>
					<suiteXmlFiles>
						<suiteXmlFile>src/it/config/testrun_config.xml</suiteXmlFile>
					</suiteXmlFiles>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<dependencies></dependencies>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.1.0</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
					<flattenMode>resolveCiFriendliesOnly</flattenMode>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<Build-Java>${java.version}</Build-Java>
							<Build-OS>${os.name}</Build-OS>
						</manifestEntries>
						<manifestSections>
							<manifestSection>
								<name>Build-Info</name>
								<manifestEntries>
									<qaf-Build-Time>${maven.build.timestamp}</qaf-Build-Time>
									<qaf-Version>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}</qaf-Version>
									<qaf-Revision>${parsedVersion.incrementalVersion} ${parsedVersion.qualifier}</qaf-Revision>
									<qaf-Type>${qaf.type}</qaf-Type>
								</manifestEntries>
							</manifestSection>
						</manifestSections>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.11.1</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<phase>deploy</phase>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<encoding>UTF-8</encoding>
							<!--<sourceFileIncludes>
                                <sourceFileInclude>com/qmetry/**</sourceFileInclude>
                            </sourceFileIncludes>-->
							<doclint>none</doclint>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<distributionManagement>
		<repository>
			<id>ossrh</id>
			<name>Central Repository OSSRH</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
		<snapshotRepository>
			<uniqueVersion>false</uniqueVersion>
			<id>ossrh</id>
			<name>Central Repository OSSRH Snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
</project>